--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/node": "^18.15.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
     "papaparse": "^5.4.1",
-    "@types/papaparse": "^5.3.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.8.0",
-    "typescript": "^4.9.5",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0"
+    "recharts": "^2.15.4",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0"
   }
-} 
+}
