--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/react-dom": "^18.0.11",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
+    "d3-geo": "^3.1.1",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "papaparse": "^5.4.1",
+    "pdfmake": "^0.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.4",
     "typescript": "^4.9.5"
   },
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pdfmake": "^0.2.12",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0"
