--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,15 @@
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3.0.0"
+    }
+  },
   "rewrites": [
+    { "source": "/api/dashboard/sync-status", "destination": "/api/sync-status" },
+    { "source": "/api/dashboard/jobs", "destination": "/api/jobs" },
+    { "source": "/api/dashboard/all", "destination": "/api/all" },
     { "source": "/((?!api/).*)", "destination": "/index.html" }
   ],
   "headers": [
