--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     { "source": "/api/dashboard/sync-status", "destination": "/api/sync-status" },
     { "source": "/api/dashboard/jobs", "destination": "/api/jobs" },
     { "source": "/api/dashboard/all", "destination": "/api/all" },
-    { "source": "/((?!api/).*)", "destination": "/index.html" }
+    { "source": "/((?!api/|data/|static/).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
