--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@types/node": "^18.15.0",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.28",
