--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,15 @@
   "framework": "create-react-app",
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node@3.0.0"
+      "runtime": "@vercel/node@3.0.0",
+      "maxDuration": 30
     }
   },
   "rewrites": [
     { "source": "/api/dashboard/sync-status", "destination": "/api/sync-status" },
     { "source": "/api/dashboard/jobs", "destination": "/api/jobs" },
     { "source": "/api/dashboard/all", "destination": "/api/all" },
-    { "source": "/((?!api/|data/|static/).*)", "destination": "/index.html" }
+    { "source": "/((?!api/|static/).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
