--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "better-sqlite3": "^12.5.0",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
     "d3-geo": "^3.1.1",
@@ -16,6 +17,7 @@
     "lucide-react": "^0.294.0",
     "papaparse": "^5.4.1",
     "pdfmake": "^0.2.20",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
