Fix Vercel serverless API configuration for Neon DB connection

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "un-jobs-analytics-dashboard",
+  "name": "talentanalytics",
   "version": "1.0.0",
   "private": true,
   "homepage": ".",
