--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "build",
+  "functions": {
+    "api/*.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  },
   "rewrites": [
     { "source": "/api/dashboard/:path*", "destination": "/api/:path*" }
   ]
