--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,22 @@
 {
-  "rewrites": [
-    { "source": "/api/dashboard/:path*", "destination": "/api/:path*" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/*.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/api/dashboard/(.*)", "dest": "/api/$1" },
+    { "src": "/api/(.+)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
