--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,10 @@
     { "src": "/api/dashboard/(.*)", "dest": "/api/$1" },
     { "src": "/api/(.+)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "build": {
+    "env": {
+      "CI": "false"
+    }
+  }
 }
