--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,14 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+  "functions": {
+    "api/*.ts": {
+      "runtime": "@vercel/node@3.x"
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/dashboard/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "build": {
-    "env": {
-      "CI": "false"
-    }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/dashboard/sync-status", "destination": "/api/sync-status" },
+    { "source": "/api/dashboard/jobs", "destination": "/api/jobs" },
+    { "source": "/api/dashboard/all", "destination": "/api/all" },
+    { "source": "/api/dashboard/sync", "destination": "/api/sync-status" },
+    { "source": "/api/test", "destination": "/api/test" }
+  ]
 }
