Fix NPSA/IPSA classification: show as non-staff at equivalent tier levels
- NPSA and IPSA are now correctly classified as Non-Staff (Service Agreements)
- Individual grade levels (NPSA-8, NPSA-10, IPSA-12, etc.) show in pyramid at equivalent tiers
- Visual distinction in pyramid: striped bars, sky blue color, italic text with asterisk
- Staff/non-staff ratios correctly exclude NPSA/IPSA from staff counts
- Updated backend reports to include Service Agreements as distinct category
- Intelligence briefs show NPSA/IPSA in non-staff breakdown

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eject": "react-scripts eject",
     "build:azure": "npm run build && cp web.config build/",
     "serve": "npx serve -s build",
-    "analyze": "npm run build && npx serve -s build"
+    "analyze": "npm run build && npx serve -s build",
+    "deploy:data": "node scripts/migrate-sqlite-to-neon.js",
+    "sync:prod": "cd backend && npm run sync:dev && cd .. && npm run deploy:data"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +58,8 @@
     "@types/pdfmake": "^0.2.12",
     "@vercel/node": "^5.5.13",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^17.2.3",
+    "playwright": "^1.57.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0"
   }
