--- a/backend/env.example
+++ b/backend/env.example
@@ -1,11 +1,15 @@
-# Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/jobs_analytics
-DB_HOST=localhost
+# Source Database Configuration (Azure PostgreSQL or primary source)
+DATABASE_URL=postgresql://username:password@your-azure-host:5432/jobs_analytics
+DB_HOST=your-azure-host.postgres.database.azure.com
 DB_PORT=5432
 DB_NAME=jobs_analytics
 DB_USER=your_username
 DB_PASSWORD=your_password
-DB_SSL=false
+DB_SSL=true
+
+# Neon Database Configuration (Production - powers Vercel deployment)
+# Get this from your Neon dashboard: https://console.neon.tech
+NEON_DATABASE_URL=postgresql://username:password@your-neon-host.neon.tech:5432/neondb?sslmode=require
 
 # Server Configuration
 PORT=5000
